# qflashlight

./: .gitignore  .gitlab-ci.yml  .pylintrc  Makefile  README.md  flake.nix  guix.scm  setup.cfg  setup.py
qflashlight/: application.py  color_dialog.py  flashlight_model.py  flashlight_widget.py  qflashlight.py  text_dialog.py  text_generator.py
