[metadata]
name = qflashlight
version = 0.1.0
description = "Simple Qt-based fullscreen flashlight"
long_description = file: README.md
license = GPLv3+
author = "Ingo Ruhnke"
author_email = "grumbel@gmail.com"
url = https://gitlab.com/Grumbel/qflashlight

[options]
packages = find:

[options.entry_points]
gui_scripts =
  qflashlight = qflashlight.qflashlight:main_entrypoint

[options.data_files]
  share/icons/hicolor/scalable/apps = data/qflashlight.svg
  share/applications = qflashlight.desktop

[flake8]
max-line-length = 120

[mypy]
strict = True
check_untyped_defs = True
disallow_untyped_defs = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True

[pylint]
extension-pkg-whitelist = PyQt5
disable =
  invalid-name,
  missing-docstring,
  too-few-public-methods,
  too-many-instance-attributes,
  unnecessary-lambda,
  unspecified-encoding,
  unused-argument,

[pylint.FORMAT]
max-line-length = 120

# EOF #
